pading and margins were updated

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </div>
 <div class="info">
     <h1>This is A Weather App</h1>
-    <h2 >You Can get weather info from Open Weather App</h2>
+    <h2 >You Can get weather information from Open Weather App</h2>
     <p>Open weather app is a website where you can make a API Key to access acorate data from it.<br>
     I have watched so many you tube videos to code such an app at the begining it was not <br>easy for
      me to do I have tried more then ten, eleven times some times it seamed imposibl but<h3><br><b><i>I never 
